# future-internet

./: .gitignore
project3/: .gitignore  explain.md  pyproject.toml
project3/output_data/: sat_links.txt
project3/scripts/: check_score.py  solve.py  util.py  visualize.py
project4/: Dockerfile  Makefile  README.md  copy.sh  pyproject.toml  team_name.txt
project4/code/: logger.py  skeleton_a.py  skeleton_b.py  skeleton_b.py.pclprof  skeleton_c.py
project4/myself/output/a/: rate1.rate  rate10.rate  rate11.rate  rate12.rate  rate13.rate  rate14.rate  rate15.rate  rate16.rate  rate17.rate  rate18.rate  rate19.rate  rate2.rate  rate20.rate  rate21.rate  rate22.rate  rate23.rate  rate24.rate  rate25.rate  rate26.rate  rate27.rate  rate28.rate  rate29.rate  rate3.rate  rate30.rate  rate31.rate  rate32.rate  rate33.rate  rate34.rate  rate35.rate  rate36.rate  rate37.rate  rate38.rate  rate39.rate  rate4.rate  rate5.rate  rate6.rate  rate7.rate  rate8.rate  rate9.rate
project4/myself/output/b/: program.lp  program_0.lp  program_1.lp  program_10.lp  program_11.lp  program_12.lp  program_13.lp  program_14.lp  program_15.lp  program_16.lp  program_17.lp  program_18.lp  program_19.lp  program_2.lp  program_20.lp  program_21.lp  program_22.lp  program_23.lp  program_24.lp  program_25.lp  program_26.lp  program_27.lp  program_28.lp  program_29.lp  program_3.lp  program_30.lp  program_31.lp  program_32.lp  program_33.lp  program_34.lp  program_35.lp  program_36.lp  program_37.lp  program_38.lp  program_39.lp  program_4.lp  program_5.lp  program_6.lp  program_7.lp  program_8.lp  (+39 more)
(+119 files in other folders)
