[tool.poetry]
name = "project3"
version = "0.1.0"
description = ""
authors = ["Elwin Stephan <elwin.stephan@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.7.1"
networkx = "^2.5.1"
numpy = "^1.20.2"
pandas = "^1.2.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
