[tool.poetry]
name = "project4"
version = "0.1.0"
description = ""
authors = ["Elwin Stephan <elwin.stephan@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
networkx = "^2.5.1"
numpy = "^1.20.3"
ortools = "^9.0.9048"
ortoolslpparser = {git = "https://github.com/snkas/python-ortools-lp-parser.git", rev = "v1.5.2"}
line-profiler-pycharm = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
